chapter12/istio-specs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: https-service0
  namespace: sidecar
spec:
  gateways:
    - https-service0
  hosts:
    - 'cncamp.com'
  http:
    - match:
        - uri:
            exact: /healthz
      route:
        - destination:
            host: httpserver
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: https-service0
  namespace: sidecar
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - 'cncamp.com'
      port:
        name: httpserver
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
